--- a/NeptuneCarbonBukkit/src/main/resources/plugin.yml
+++ b/NeptuneCarbonBukkit/src/main/resources/plugin.yml
@@ -8,4 +8,5 @@ authors: [ HyperfireRS ]
 description: Bukkit-side plugin for Neptune's Carbon.
 depend:
   - LuckPerms
+softdepend:
   - PlaceholderAPI
