Made blacklists more stable, and re-did punishment messages ( PunishmentMessages )

--- a/NeptuneCarbonBukkit/src/main/resources/config.yml
+++ b/NeptuneCarbonBukkit/src/main/resources/config.yml
@@ -17,3 +17,9 @@ ranks:
   defaultRankPermissions:
     - 'rank.default'
     - 'default'
+
+# UNCOMMENT BTW
+#banAppealLink: 'appeal link here'
+#blacklistAppealLink: 'yeah'
+#unbanPurchaseLink: 'idfk'
+#unblacklistPurchaseLink: 'k'
